[gd_scene load_steps=2 format=3 uid="uid://evolutionspire"]

[ext_resource type="Script" path="res://scripts/screens/evolution_spire.gd" id="1_shop"]

[node name="EvolutionSpire" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.12, 0.1, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="Title" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 28
text = "Evolution Spire"
vertical_alignment = 1

[node name="FoodLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "Food Tokens: 150"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="CreatureSection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/CreatureSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "Evolve Creatures"

[node name="CreatureContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/CreatureSection"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CardSection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/CardSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "Cards for Sale"

[node name="CardContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/CardSection"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ServiceSection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/ServiceSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "Services"

[node name="ServiceContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/ServiceSection"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LeaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Leave Shop"
